# rust-actix-api

./: Cargo.toml
src/: main.rs
src/models/: cep.rs  mod.rs
src/routes/: cep.rs  mod.rs
src/services/: viacep.rs
