[package]
name = "rust-actix-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
futures = "0.3" # for our async / await blocks
async-trait = "0.1.52"